# momentum-backend

./: .dockerignore  .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  env.example  fix_workflow_category_case.sql  rust-analyzer.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
docs/: ASSETS_URL_IMPLEMENTATION.md  INDEX.md  LOGIN_PERFORMANCE_OPTIMIZATION.md  PROFILE_API_ASSETS_UPDATE.md  comment_feature.md
docs/api/: API_RESPONSE_DESIGN.md  ISSUE_TRANSITIONS_API.md  PROFILE_API_UPDATED.md  PROJECT_API_IMPLEMENTATION.md  WORKSPACE_SWITCHING_API.md
docs/auth/: AUTH_README.md  LOGOUT_API.md  LOGOUT_IMPLEMENTATION_SUMMARY.md
docs/database/: MODELS_REFACTORING_SUMMARY.md  MOMENTUM_SCHEMA_IMPLEMENTATION.md  RELATIONSHIP_MODEL_SUMMARY.md  (+1 more)
examples/: asset_url_demo.rs  bcrypt_performance_test.rs  comment_demo.rs  detailed_login_performance.rs  issue_transitions_demo.rs  issues_websocket_demo.rs  issues_with_assignee_demo.rs  issues_with_team_demo.rs  login_performance_test.rs  login_performance_validation.rs  login_with_workspace_demo.rs  logout_demo.rs  performance_test.rs  profile_api_demo.rs  project_with_available_statuses_demo.rs  simple.rs  test_optimized_login.rs  test_schema.rs  token_auto_renewal_demo.rs  unified_api_demo.rs  unified_websocket_demo.rs  websocket_demo.md  websocket_security_demo.rs  workflow_demo.rs  workspace_switching_demo.rs
scripts/: demo_websocket.sh  test_websocket.sh
src/: config.rs  error.rs  lib.rs  main.rs  schema.rs
tests/: integration_tests.rs
(+178 files in other folders)
