[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["headers", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8"
redis = { version = "0.25", features = ["tokio-comp"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.1"
bcrypt = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.4", features = ["cors"] }
headers = "0.3"
axum-extra = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
clap = "4.0"
url = "2.4"
thiserror = "1.0"
envy = "0.4"
validator = { version = "0.16", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
tungstenite = "0.20"
